[package]
name = "hyper_lua_actor"
version = "0.1.1"
license = "MIT"
authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
edition = "2018"
include = ["src/**/*.rs", "Cargo.toml"]
readme = "README.md"
description = "Binding of lua_actor & hyper"
documentation = "https://docs.rs/hyper_lua_actor/"
homepage = "https://github.com/TeaEntityLab/hyperLuaActor"
repository = "https://github.com/TeaEntityLab/hyperLuaActor"
keywords = ["lua","actor","binding","async", "hyper"]

[badges.maintenance]
status = "actively-developed"

[lib]
name = "hyper_lua_actor"
path = "src/lib.rs"

[features]
default = [
    "runtime",
]
runtime = [
    "tokio",
]

[dependencies]
fp_rust="^0.1.40"
rlua="0.17.0"
lua_actor="0.2.0"

hyper = { version = "^0.14.10", features = ["full"] }
futures="^0.3.15"
url="^2.2.2"
tokio = { version = "^1.8.2", features = ["full"], optional = true }
pretty_env_logger = "^0.4"

[[test]]
name = "bind"
path = "tests/bind.rs"
required-features = ["runtime"]
